# study_c_macro

./: CMakeLists.txt  LICENSE  README.md  header.hpp  main.cpp  methold1.cpp  methold2.cpp  methold3.cpp  methold4.cpp  methold5.cpp  methold6.cpp  my_alg.hpp  my_macro.hpp  my_manage.hpp
